Fix <script> visibility

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,3 @@ body{
     width: 480px;
     margin: 0px auto;
 }
-body > *{
-    display: block;
-}
